@@ -1,3 +1,8 @@
+2013-02-26  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclObj.c: Don't panic if Tcl_ConvertToType is called for a
+	type that doesn't have a setFromAnyProc, create a proper error message.
+
 2013-02-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/assocd.test:	[Bugs 3605719,3605720] Test independence.
